name:                sdl2-gfx
version:             0.1
synopsis:            Bindings to SDL2_gfx.
description:         Haskell bindings to SDL2_gfx.
license:             MIT
license-file:        LICENSE
author:              Siniša Biđin
maintainer:          sinisa@bidin.cc
copyright:           Copyright © 2015 Siniša Biđin
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sbidin/sdl2-gfx.git

library
  ghc-options: -Wall -O2

  exposed-modules:
    SDL.Primitive,
    SDL.Raw.Primitive,
    SDL.Framerate,
    SDL.Raw.Framerate,
    SDL.Rotozoom,
    SDL.Raw.Rotozoom,
    SDL.ImageFilter,
    SDL.Raw.ImageFilter

  other-modules:
    SDL.Raw.Helper

  hs-source-dirs:
    src

  pkgconfig-depends:
    sdl2 >= 2.0.3,
    SDL2_gfx >= 1.0.1

  build-depends:
    base             >= 4.7 && < 5,
    linear           >= 1.10.1.2,
    sdl2             >= 2.0,
    template-haskell >= 2.10.0.0,
    transformers     >= 0.2,
    vector           >= 0.10.9.0

  default-language:
    Haskell2010

flag example
  description: Build the example executable
  default:     True

executable sdl2-gfx-example
  ghc-options: -Wall
  hs-source-dirs: example
  main-is: Example.hs
  default-language: Haskell2010

  if flag(example)
    build-depends:
      base     >= 4.7 && < 5,
      linear   >= 1.10.1.2,
      sdl2     >= 2.0,
      sdl2-gfx >= 0.1,
      vector   >= 0.10.9.0
  else
    buildable: False
